Added default stylesheet.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       padding: 0;
     }
   </style>
+  <link rel="stylesheet" href="react-jsonschema-form.css">
 </head>
 <body>
   <div id="root"></div>
