--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="https://fb.me/react-dom-0.14.3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/mode/javascript/javascript.min.js"></script>
   <script src="https://npmcdn.com/react-codemirror@0.2.2/dist/react-codemirror.min.js"></script>
-  <script src="https://npmcdn.com/react-jsonschema-form@0.4.1/dist/react-jsonschema-form-0.4.1.js"></script>
+  <script src="https://npmcdn.com/react-jsonschema-form@0.5.0/dist/react-jsonschema-form.js"></script>
   <script src="app.js" type="text/babel"></script>
 </body>
 </html>
