Multiple external json examples.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
   <title>react-jsonschema-form demo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/codemirror.css">
-
+<!--   <link rel="stylesheet" href="https://npmcdn.com/react-jsonschema-form@0.5.0/dist/react-jsonschema-form.css">-->
 </head>
 <body>
-  <div class="container-fluid">
-    <h1>react-jsonschema-form</h1>
-    <div id="app"></div>
-  </div>
+  <div id="app"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   <script src="https://fb.me/react-0.14.3.min.js"></script>
   <script src="https://fb.me/react-dom-0.14.3.min.js"></script>
