--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>react-jsonschema-form demo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/codemirror.css">
-<!--   <link rel="stylesheet" href="https://npmcdn.com/react-jsonschema-form@0.5.0/dist/react-jsonschema-form.css">-->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="app"></div>
