--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>react-jsonschema-form demo</title>
+  <title>react-jsonschema-form playground</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/codemirror.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div id="app"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-  <script src="https://fb.me/react-0.14.3.min.js"></script>
-  <script src="https://fb.me/react-dom-0.14.3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/mode/javascript/javascript.min.js"></script>
-  <script src="https://npmcdn.com/react-codemirror@0.2.2/dist/react-codemirror.min.js"></script>
-  <script src="https://npmcdn.com/react-jsonschema-form@0.5.0/dist/react-jsonschema-form.js"></script>
-  <script src="app.js" type="text/babel"></script>
+  <script src="./bundle.js"></script>
 </body>
 </html>
