Added credits for sample bootstrap themes.

--- a/playground/index.html
+++ b/playground/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
   <div id="app"></div>
+  <p style="text-align:center">
+    Bootstrap themes courtsesy of
+    <a href="http://bootswatch.com/">Bootswatch</a> and
+    <a href="https://github.com/aalpern/bootstrap-solarized/">bootstrap-solarized</a>.
+  </p>
   <script src="/static/bundle.js"></script>
 </body>
 </html>
