--- a/playground/index.prod.html
+++ b/playground/index.prod.html
@@ -10,6 +10,8 @@
 <body>
   <div id="app"></div>
   <p style="text-align:center">
+    Powered by
+    <a href="https://github.com/mozilla-services/react-jsonschema-form">react-jsonschema-form</a>.
     Bootstrap themes courtsesy of
     <a href="http://bootswatch.com/">Bootswatch</a> and
     <a href="https://github.com/aalpern/bootstrap-solarized/">bootstrap-solarized</a>.
