--- a/examples/index.html
+++ b/examples/index.html
@@ -8,9 +8,47 @@
   <link rel="stylesheet" id="theme" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-<script src="https://unpkg.com/react-jsonschema-form/dist/react-jsonschema-form.js"></script>
-        <script>
-      console.log(JSONSchemaForm);
+  <div id="app"></div>
+
+  <!-- https://reactjs.org/docs/add-react-to-a-website.html -->
+  <!-- https://frontarm.com/articles/how-to-integrate-react-into-existing-app/ -->
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="./react-jsonschema-form.js"></script>
+  <script>
+      const Form = JSONSchemaForm.default;
+      
+      const schema = {
+        title: "Todo",
+        type: "object",
+        required: ["title"],
+        properties: {
+          title: {type: "string", title: "Title", default: "A new task"},
+          done: {type: "boolean", title: "Done?", default: false}
+        }
+      };
+
+      const theme = {
+        primaryColor: "red",
+        borderColor: "#c3c9d7",
+        fontSize: "16",
+        activeColor: "#1ad9f8",
+        labelColor: "#697b8c",
+        textTransform: "uppercase",
+        paddingBottom: "8"
+      };
+
+      const log = (type) => console.log.bind(console, type);
+
+      ReactDOM.render(
+        React.createElement(Form, {
+          schema: schema, 
+          theme: theme,
+          onChange: log("changed"), 
+          onSubmit: log("submitted"), 
+          onError: log("errors")
+        }), document.getElementById("app")
+      );
   </script>
 </body>
 </html>
