enhanced tooltip widget

--- a/playground/index.html
+++ b/playground/index.html
@@ -7,6 +7,22 @@
   <title>react-jsonschema-materialui-forms playground</title>
   <link rel="stylesheet" id="theme" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  
+  <style>
+    html {
+      font-size:100%;
+    }
+    .click-tooltip__wrapper div[role="tooltip"] {
+      pointer-events: all;
+      overflow-y: auto;
+    }
+    .click-tooltip__wrapper div[role="tooltip"] > div {
+      overflow-y: auto;
+    max-width: 500px;
+    max-height: 50vh;
+      
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
