--- a/packages/playground/playground/index.prod.html
+++ b/packages/playground/playground/index.prod.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>react-jsonschema-form playground</title>
-  <link rel="stylesheet" id="theme" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" id="theme" href="">
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
